<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".Views.OtpVerificationActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verification_title"
            android:textColor="@color/colorAccent"
            android:fontFamily="@string/font_family_condensed"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="82dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verification_alert"
            android:textColor="@color/colorAccent"
            android:fontFamily="@string/font_family_regular"
            android:textSize="14sp"
            android:layout_marginTop="19dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/title"
            />

        <TextView
            android:id="@+id/verify_process"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/instruction_to_verify"
            android:textColor="@color/colorAccent"
            android:fontFamily="@string/font_family_regular"
            android:textSize="14sp"
            android:layout_marginTop="19dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/alert"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <Button
            android:id="@+id/button_one"
            android:layout_width="55.04dp"
            android:layout_height="55.04dp"
            android:layout_marginTop="38dp"
            android:layout_marginLeft="34dp"
            android:background="@drawable/round_button"
            android:text="@string/btn_one"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/verify_process"/>

        <Button
            android:id="@+id/button_two"
            android:layout_width="55.04dp"
            android:layout_height="55.04dp"
            android:layout_marginTop="38dp"
            android:layout_marginLeft="19dp"
            android:background="@drawable/round_button"
            android:text="@string/btn_two"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/button_one"
            app:layout_constraintTop_toBottomOf="@id/verify_process"/>

        <Button
            android:id="@+id/button_three"
            android:layout_width="55.04dp"
            android:layout_height="55.04dp"
            android:layout_marginTop="38dp"
            android:layout_marginLeft="19dp"
            android:background="@drawable/round_button"
            android:text="@string/btn_three"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/button_two"
            app:layout_constraintTop_toBottomOf="@id/verify_process"/>

        <Button
            android:id="@+id/button_four"
            android:layout_width="55.04dp"
            android:layout_height="55.04dp"
            android:layout_marginTop="38dp"
            android:layout_marginLeft="19dp"
            android:background="@drawable/round_button"
            android:text="@string/btn_four"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/button_three"
            app:layout_constraintTop_toBottomOf="@id/verify_process"/>

        <Button
            android:id="@+id/button_five"
            android:layout_width="55.04dp"
            android:layout_height="55.04dp"
            android:layout_marginTop="38dp"
            android:layout_marginLeft="19dp"
            android:background="@drawable/round_button"
            android:text="@string/btn_five"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/button_four"
            app:layout_constraintTop_toBottomOf="@id/verify_process"/>

        <TextView
            android:id="@+id/otp_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:fontFamily="@string/font_family_light"
            android:textSize="12sp"
            android:text="@string/retry_otp"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@id/button_one"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <ImageView
            android:id="@+id/globe"
            android:layout_width="match_parent"
            android:layout_height="351dp"
            android:src="@drawable/ss"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>