<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@string/main_font_style"
        android:gravity="center"
        android:text="@string/signup_title"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="50dp"
                android:text="@string/lbl_first_name"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:hint="@string/first_name"
                android:inputType="textCapSentences"
                android:textColor="@color/colorAccent"
                android:textColorHint="#33FFFFFF"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/lbl_first_name" />

            <TextView
                android:id="@+id/lbl_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:text="@string/lbl_last_name"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/first_name" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:hint="@string/last_name"
                android:inputType="textCapSentences"
                android:paddingStart="0dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="#33FFFFFF"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/lbl_last_name" />

            <TextView
                android:id="@+id/lbl_middle_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:text="@string/lbl_middle_name"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/last_name" />

            <EditText
                android:id="@+id/middle_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:hint="@string/middle_name"
                android:inputType="textCapSentences"
                android:paddingLeft="0dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="#33FFFFFF"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/lbl_middle_name" />

            <TextView
                android:id="@+id/lbl_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:text="@string/lbl_user_name"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/middle_name" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:hint="@string/middle_name"
                android:inputType="textCapSentences"
                android:paddingLeft="0dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="#33FFFFFF"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/lbl_user_name" />

            <TextView
                android:id="@+id/lbl_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:text="@string/lbl_email"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/user_name" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="0dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="#33FFFFFF"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/lbl_email" />

            <TextView
                android:id="@+id/lbl_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:text="@string/lbl_phone"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/email" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingLeft="0dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="#33FFFFFF"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/lbl_phone" />

            <TextView
                android:id="@+id/lbl_id_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:text="@string/lbl_id_number"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/phone" />

            <EditText
                android:id="@+id/id_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:hint="@string/id_number"
                android:inputType="number"
                android:paddingStart="0dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="#33FFFFFF"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/lbl_id_number" />

            <TextView
                android:id="@+id/lbl_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:text="@string/lbl_password"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/id_number" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lbl_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#33FFFFFF"
                app:layout_constraintTop_toBottomOf="@id/lbl_password"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="50dp"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:paddingLeft="0dp"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="#33FFFFFF"
                    android:textSize="14sp"
                    app:passwordToggleEnabled="true" />
            </com.google.android.material.textfield.TextInputLayout>


            <ImageButton
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="25dp"
                android:background="@color/colorPrimaryDark"
                android:onClick="signUpUser"
                android:src="@drawable/group621"
                app:layout_constraintTop_toBottomOf="@id/lbl_password2" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/globe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ss" />
</RelativeLayout>