<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".Views.auth.UserNamesActivity">


    <LinearLayout
        android:id="@+id/L11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/main_font_style"
            android:text="@string/signup_title"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/lbl_first_name"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/first_name"
                android:inputType="textCapSentences"
                android:textColor="@color/colorAccent"
                android:textColorHint="#33FFFFFF"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/lbl_first_name" />


            <TextView
                android:id="@+id/lbl_middle_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lbl_middle_name"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/last_name" />

            <EditText
                android:id="@+id/middle_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/middle_name"
                android:inputType="textCapSentences"
                android:paddingLeft="0dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="#33FFFFFF"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/lbl_middle_name" />
            <TextView
                android:id="@+id/lbl_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lbl_last_name"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/first_name" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/last_name"
                android:inputType="textCapSentences"
                android:paddingStart="0dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="#33FFFFFF"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/lbl_last_name" />
        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/next_button_circle"
        android:onClick="nextPage"
        android:padding="8dp"
        app:srcCompat="@drawable/ic_chevron_right" />

    <ImageView
        android:id="@+id/globe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ss" />
</RelativeLayout>